tests/errors/test-init-too-many-args.script

int a{1, 2};

//>2:5: error C46: too many arguments provided in variable initialization.
